--- a/package.json
+++ b/package.json
@@ -1,33 +1,22 @@
 {
   "name": "telegram-reminder-bot",
   "version": "1.0.0",
-  "description": "Bot de Telegram profesional para recordatorios con lenguaje natural",
+  "description": "Bot de Telegram profesional para recordatorios",
   "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "node index.js",
-    "dev": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [
-    "telegram",
-    "bot",
-    "recordatorios",
-    "reminders",
-    "chrono",
-    "natural-language"
-  ],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "telegraf": "^4.15.0",
     "chrono-node": "^2.7.5",
     "sqlite3": "^5.1.7",
     "node-cron": "^3.0.3",
     "moment-timezone": "^0.5.44",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=16"
   }
 }
