--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "telegram-reminder-bot",
   "version": "1.0.0",
-  "description": "Bot de Telegram profesional para recordatorios",
+  "description": "Bot de recordatorios y notas con Telegram + OpenAI",
   "main": "index.js",
-  "private": true,
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "telegraf": "^4.15.0",
-    "chrono-node": "^2.7.5",
-    "sqlite3": "^5.1.7",
-    "node-cron": "^3.0.3",
-    "moment-timezone": "^0.5.44",
+    "telegraf": "^4.18.2",
+    "sqlite3": "^5.1.6",
+    "moment-timezone": "^0.5.43",
+    "chrono-node": "^2.3.2",
+    "express": "^4.18.2",
+    "openai": "^4.35.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "node-cron": "^3.0.2"
   },
   "engines": {
-    "node": ">=16"
-  }
+    "node": "20.x"
+  },
+  "keywords": ["telegram", "bot", "reminder", "notes", "openai"],
+  "author": "Jhon",
+  "license": "MIT"
 }
