--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "telegram-reminder-bot",
   "version": "1.0.0",
-  "description": "Bot de recordatorios y notas con Telegram + OpenAI",
+  "description": "Bot de Telegram para recordatorios y notas con integración opcional de OpenAI",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
-    "telegraf": "^4.18.2",
+    "telegraf": "^4.21.1",
     "sqlite3": "^5.1.6",
     "moment-timezone": "^0.5.43",
     "chrono-node": "^2.3.2",
@@ -15,11 +18,5 @@
     "openai": "^4.35.0",
     "dotenv": "^16.3.1",
     "node-cron": "^3.0.2"
-  },
-  "engines": {
-    "node": "20.x"
-  },
-  "keywords": ["telegram", "bot", "reminder", "notes", "openai"],
-  "author": "Jhon",
-  "license": "MIT"
+  }
 }
