Revise .env with placeholders and comments
Updated .env file to include placeholders and comments for configuration.

--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
-BOT_TOKEN=TU_TOKEN_DE_TELEGRAM_AQUI
+# ===============================
+# Telegram Bot Token
+# Obtenido de @BotFather
+BOT_TOKEN=
+
+# OpenAI API Key
+# Obtenida de https://platform.openai.com/account/api-keys
+OPENAI_KEY=
+
+# Zona horaria (opcional)
+TIMEZONE=America/Argentina/Buenos_Aires
