--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "node": "20.x"
   },
   "dependencies": {
-    "telegraf": "4.12.2",
-    "express": "^4.18.2",
-    "moment-timezone": "^0.5.43",
-    "chrono-node": "^2.3.2",
-    "node-cron": "^3.0.2",
-    "dotenv": "^16.3.1",
-    "openai": "^4.12.0"
-  }
+  "telegraf": "4.12.2",
+  "chrono-node": "^2.3.1",
+  "moment-timezone": "^0.5.43",
+  "node-cron": "^3.0.2",
+  "express": "^4.18.2",
+  "sqlite3": "^5.1.6",
+  "dotenv": "^16.3.1",
+  "openai": "^4.9.1"
+}
 }
