Update .env.example with new configuration options

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,22 @@
-# Token del bot de Telegram
-# Obtén tu token hablando con @BotFather en Telegram
-BOT_TOKEN=TU_TOKEN_DE_TELEGRAM_AQUI
+# ===============================
+# TELEGRAM BOT
+# Token obtenido de @BotFather
+BOT_TOKEN=tu_telegram_token_aqui
+
+# ===============================
+# OPENAI
+# API Key obtenida en https://platform.openai.com/account/api-keys
+OPENAI_KEY=tu_openai_api_key_aqui
+
+# ===============================
+# ZONA HORARIA (opcional, default America/Argentina/Buenos_Aires)
+TIMEZONE=America/Argentina/Buenos_Aires
+
+# ===============================
+# DOMINIO PÚBLICO (Railway o custom) - necesario para webhook
+# Ejemplo: https://mi-bot-production.up.railway.app
+DOMAIN=https://telegramultimate3-production.up.railway.app
+
+# ===============================
+# PUERTO (Railway lo asigna automáticamente, default 8080)
+PORT=8080
