--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "node": "20.x"
   },
   "dependencies": {
-  "telegraf": "4.12.2",
-  "chrono-node": "^2.3.1",
-  "moment-timezone": "^0.5.43",
-  "node-cron": "^3.0.2",
-  "express": "^4.18.2",
-  "sqlite3": "^5.1.6",
-  "dotenv": "^16.3.1",
-  "openai": "^4.9.1"
-}
+    "telegraf": "^4.15.3",
+    "moment-timezone": "^0.5.44",
+    "node-cron": "^3.0.3",
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.7",
+    "dotenv": "^16.4.1",
+    "openai": "^4.26.0"
+  }
 }
