--- a/.env
+++ b/.env
@@ -1,11 +1,5 @@
-# ===============================
-# Telegram Bot Token
-# Obtenido de @BotFather
-BOT_TOKEN=
-
-# OpenAI API Key
-# Obtenida de https://platform.openai.com/account/api-keys
-OPENAI_KEY=
-
-# Zona horaria (opcional)
+BOT_TOKEN=tu_token_de_telegram
+GROQ_API_KEY=tu_llave_de_groq
 TIMEZONE=America/Argentina/Buenos_Aires
+PORT=8080
+# No pongas DOMAIN en local, para que use "Polling"
